# CV_project

./: README.md
src/: CMakeLists.txt  main.cpp
src/headers/afterClassification/: afterClassification.cpp  afterClassification.h
src/headers/beforeClassification/: beforeClassification.cpp  beforeClassification.h
src/headers/compare/: compare.cpp  compare.h
src/headers/detection/: detection.cpp  detection.h  highLevelFunc.cpp  highLevelFunc.h  lowLevelFunc.cpp  lowLevelFunc.h
